--- a/style.css
+++ b/style.css
@@ -453,7 +453,7 @@ height: 62px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url(https://free4kwallpapers.com/uploads/originals/2020/05/31/-beautiful-sunset-with-a-rocket-wallpaper.png) no-repeat center / cover;
+    background: url(https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSk1BxJxhyC1BQcukzXveO3q94FiDv5AlzI3vAVPCQQ7D17f_ip) no-repeat center / cover;
     box-shadow: inset  0px 0px 15px  #9413cf;
 }
 
